--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,3 +21,12 @@ services:
     restart: always
     ports:
       - 8080:8080
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    ports:
+      - 80:80
+    volumes:
+      - ./config/nginx:/etc/nginx/conf.d
+      - ./data/nginx:/var/log/nginx
