WIP: reverse proxy

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -8,12 +8,12 @@ events {
 http {
 
     upstream front.simplechat.lan {
-        server localhost:8080;
+        server localhost:51181;
         keepalive 1024;
     }
 
     upstream back.simplechat.lan {
-        server localhost:3000;
+        server localhost:51180;
         keepalive 1024;
     }
 
@@ -33,32 +33,30 @@ http {
     ############
     ## Redirect
     server {
-        listen 80 ssl;
+        listen 80;
         server_name localhost;
 
         location / {
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header Host $host;
-
             proxy_pass    http://front.simplechat.lan;
 
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_http_version 1.1;
+            proxy_set_header Host $host;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
         }
     }
 
     server {
-        listen 80 ssl;
+        listen 80;
         server_name localhost;
 
         location / {
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header Host $host;
-
             proxy_pass    http://back.simplechat.lan;
 
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_http_version 1.1;
+            proxy_set_header Host $host;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
         }
