--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -1,18 +1,17 @@
-
 worker_processes auto;
 worker_rlimit_nofile 8192;
 
 events {
     worker_connections 16384;  ## Default: 1024
 }
-http {
 
-    upstream front.simplechat.lan {
+http {
+    upstream front-simplechat {
         server localhost:51181;
         keepalive 1024;
     }
 
-    upstream back.simplechat.lan {
+    upstream back-simplechat {
         server localhost:51180;
         keepalive 1024;
     }
@@ -24,40 +23,25 @@ http {
         return       444;
     }
 
-    server {
-        listen       443  ssl;
-        server_name  _;
-        return       444;
-    }
-
     ############
     ## Redirect
     server {
-        listen 80;
+        listen 51182;
         server_name localhost;
 
-        location / {
-            proxy_pass    http://front.simplechat.lan;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
 
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
+        location / {
+            proxy_pass    http://front-simplechat;
+        }
+
+        location /api/ {
+            proxy_pass    http://back-simplechat;
         }
     }
 
-    server {
-        listen 80;
-        server_name localhost;
-
-        location / {
-            proxy_pass    http://back.simplechat.lan;
-
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-        }
-    }
+}
