--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,9 @@ services:
   nginx:
     image: nginx:latest
     container_name: nginx
+    network_mode: "host"
     ports:
-      - 80:80
+      - 51182:51182
     volumes:
-      - ./config/nginx:/etc/nginx/conf.d
+      - ./config/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./data/nginx:/var/log/nginx
