pass environment variable from docker compose

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,6 +11,14 @@ RUN go build -o openapi .
 
 FROM scratch AS runtime
 ENV GIN_MODE=release
+
+ARG ACCESS_CONTROL_ALLOW_ORIGIN
+ENV ACCESS_CONTROL_ALLOW_ORIGIN=${ACCESS_CONTROL_ALLOW_ORIGIN}
+ARG WEBSOCKET_ALLOW_ORIGIN
+ENV WEBSOCKET_ALLOW_ORIGIN=${WEBSOCKET_ALLOW_ORIGIN}
+ARG COOKIE_DOMAIN
+ENV COOKIE_DOMAIN=${COOKIE_DOMAIN}
+
 COPY --from=build /go/src/openapi ./
 EXPOSE 8080/tcp
 ENTRYPOINT ["./openapi"]
